fix icon vertical alignment

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -77,3 +77,7 @@ p {
     padding-left: 0;
     padding-right: 0;
 }
+
+i.fa {
+    vertical-align: inherit;
+}
